2007-11-14  Johannes Schmid <jhs@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	libbonoboui branched for gnome-2-20

2007-11-10  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in: Added new Kashmiri translation leader.
	* translation-teams.xml.in: Added new Kashimir [ks] translation team.

2007-11-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: glib branched to glib-2-14.

2007-11-07  Gil Forcada  <gforcada@svn.gnome.org>

	* ca.po: Fixed bug #494122.

2007-11-07  Claude Paroz  <claude@2xlibre.net>

	* modules.py: Limit parameters to checkout() function, so as to be
	externally callable. Added new get_branches() function.
	* update-stats.py: Don't automatically checkout all branches of
	modules, so as to be able to checkout and generate only for a specific
	branch.
	Fixes bug #494526.

2007-11-07  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/module.tmpl: Reverted previous fix.

2007-11-06  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/module.tmpl: Fixed bug #494122.

2007-11-05  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gtk-engines and yelp branched for 2.20.

2007-11-03  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gedit branched for 2.20.

2007-11-02  Claude Paroz  <claude@2xlibre.net>

	* REQUIREMENTS: Add some hints about packages.
	* gnome-modules.xml.in:
	* releases.xml.in: gnome-power-manager branched for 2.20.

2007-11-02  Claude Paroz  <claude@2xlibre.net>

	* module.py:
	* templates/module-images.tmpl: Improved two cases: translated, but
	uses original figure (no string to translate in figure) and fuzzy, but
	no real file exists.

2007-11-02  Claude Paroz  <claude@2xlibre.net>

	* modules.py:
	* update-stats.py: Not useful to pass scmtype to ScmModule, as this
	information is already in module.

2007-11-02  Claude Paroz  <claude@2xlibre.net>

	* modules.py: Unified cvs/svn/hg/git classes in ScmModule.
	Fixed #451094.