@@ -517,7 +517,7 @@
       <module id="nautilus-cd-burner"/>
       <module id="orca" branch="gnome-2-20"/>
       <module id="seahorse" branch="gnome-2-20"/>
-      <module id="sound-juicer"/>
+      <module id="sound-juicer" branch="gnome-2-20"/>
       <module id="tomboy" branch="gnome-2-20"/>
       <module id="totem" branch="gnome-2-20"/>
       <module id="vino" branch="gnome-2-20"/>
